--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
             docker push haynesb/xdb:$CIRCLE_TAG
       - run:
           name: SSH in to DigitalOcean Server & Run Containers via Deploy.sh Script
-          command: ssh -oStrictHostKeyChecking=no -v $DROPLET_USER_PROD@$DROPLET_IP_XDB "bash deploy-production.sh $CIRCLE_TAG $DJANGO_SETTINGS_MODULE_PRODUCTION $MYSQL_DATABASE $MYSQL_USER $MYSQL_PASSWORD $MYSQL_ROOT_PASSWORD"
+          command: ssh -oStrictHostKeyChecking=no -v $DROPLET_USER_PROD@$DROPLET_IP "bash deploy-production.sh $CIRCLE_TAG $DJANGO_SETTINGS_MODULE $MYSQL_DATABASE $MYSQL_USER $MYSQL_PASSWORD $MYSQL_ROOT_PASSWORD"
       
 
 
