--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,8 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             pip install --upgrade pip
-            pip install –upgrade pip setuptools wheel
+            pip install --upgrade pip wheel
+            pip install backports.zoneinfo
             pip install -r requirements.txt
 
           
