--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -10,7 +10,7 @@ services:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
     ports:
       # <Port exposed> : < MySQL Port running inside container>
-      - '3307:3306'
+      - '3306:3306'
       # Where our data will be persisted
     volumes:
       - production-db:/var/lib/mysql
@@ -24,16 +24,13 @@ services:
   web:
     image: haynesb/xdb:${TAG}
     command: >
-      sh -c "python manage.py wait_for_db &&
-             python manage.py migrate &&
+      sh -c "python manage.py migrate &&
              daphne xdb_price_chat.asgi:application"
     ports:
       - 8000:8000
     env_file:
     - ../env/prod.env
-
-    environment:
-        - DJANGO_SETTINGS_MODULE=${DJANGO_SETTINGS_MODULE}
+    
   
   django-q:
     image: haynesb/xdb:${TAG}
