--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -30,13 +30,15 @@ services:
       - 8000:8000
     env_file:
     - ../env/prod.env
+    depends_on:
+      - db
     
   
   django-q:
     image: haynesb/xdb:${TAG}
     command: python manage.py qcluster
     depends_on:
-      - redis
+      - web
 
 volumes:
   production-db:
