--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -4,15 +4,17 @@ services:
     image: mysql
     restart: always
     environment:
-      - MYSQL_DATABASE=${MYSQL_DATABASE}
-      - MYSQL_USER=${MYSQL_USER}
-      - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-      - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
+      - MYSQL_DATABASE='mydatabase'
+      - MYSQL_USER='root'
+      - MYSQL_PASSWORD='some_password'
+      - MYSQL_ROOT_PASSWORD='some_password'
+      - MYSQL_HOST=''
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
       # Where our data will be persisted
     volumes:
+      - /tmp/app/mysqld:var/run/mysqld
       - production-db:/var/lib/mysql
   
   redis:
@@ -28,8 +30,10 @@ services:
              daphne xdb_price_chat.asgi:application"
     ports:
       - 8000:8000
+    volumes:
+      - /tmp/app/mysqld:/run/mysqld 
     env_file:
-    - ../env/prod.env
+      - ../env/prod.env
     depends_on:
       - db
     
