--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -14,7 +14,7 @@ services:
       - '3306:3306'
       # Where our data will be persisted
     volumes:
-      - /tmp/app/mysqld:var/run/mysqld
+      - /tmp/app/mysqld:/var/run/mysqld
       - production-db:/var/lib/mysql
   
   redis:
