--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -6,16 +6,15 @@ services:
     environment:
       - MYSQL_DATABASE='mydatabase'
       - MYSQL_USER='root'
-      - MYSQL_PASSWORD='some_password'
+      - MYSQL_PASSWORD=''
       - MYSQL_ROOT_PASSWORD='some_password'
-      - MYSQL_HOST=''
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
       # Where our data will be persisted
     volumes:
-      - /tmp/app/mysqld:/var/run/mysqld
-      - production-db:/var/lib/mysql
+      - /tmp/xdb_db/mysqld:/var/run/mysqld
+      - production-xdb-db:/var/lib/mysql
   
   redis:
     image: redis:alpine
@@ -31,7 +30,7 @@ services:
     ports:
       - 8000:8000
     volumes:
-      - /tmp/app/mysqld:/run/mysqld 
+      - /tmp/xdb_db/mysqld:/run/mysqld
     env_file:
       - ../env/prod.env
     depends_on:
@@ -45,4 +44,4 @@ services:
       - web
 
 volumes:
-  production-db:
+  production-xdb-db:
