--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -26,7 +26,7 @@ services:
     image: haynesb/xdb:${TAG}
     command: >
       sh -c "python manage.py migrate &&
-             daphne xdb_price_chat.asgi:application"
+             daphne -b 0.0.0.0 -p 8000 xdb_price_chat.asgi:application"
     ports:
       - 8000:8000
     volumes:
@@ -39,7 +39,7 @@ services:
   
   django-q:
     image: haynesb/xdb:${TAG}
-    command: python manage.py qcluster
+    command: python manage.py qcluster --settings xdb_price_chat.settings.production
     depends_on:
       - web
 
