--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -26,9 +26,9 @@ services:
     image: haynesb/xdb:${TAG}
     command: >
       sh -c "python manage.py migrate &&
-             daphne -b 0.0.0.0 -p 8000 xdb_price_chat.asgi:application"
+             daphne -b 0.0.0.0 -p 443 xdb_price_chat.asgi:application"
     ports:
-      - 8000:8000
+      - 443:443
     volumes:
       - /tmp/xdb_db/mysqld:/run/mysqld
     env_file:
@@ -40,6 +40,8 @@ services:
   django-q:
     image: haynesb/xdb:${TAG}
     command: python manage.py qcluster --settings xdb_price_chat.settings.production
+    env_file:
+      - ../env/prod.env
     depends_on:
       - web
 
