--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -33,6 +33,7 @@ services:
       - 80:80
     volumes:
       - /tmp/xdb_db/mysqld:/run/mysqld
+      - ../env:/home/app/ssl
     env_file:
       - ../env/prod.env
     depends_on:
