--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -28,7 +28,7 @@ services:
       sh -c "
       python manage.py migrate &&
       python manage.py collectstatic &&
-      daphne -e ssl:443:privateKey=ssl/key.pem:certKey=ssl/crt.pem xdb_price_chat.asgi:application"
+      daphne -e ssl:443:privateKey=ssl/key.pem:certKey=ssl/crt.pem:extraCertChain=ssl/chain.pem xdb_price_chat.asgi:application"
     ports:
       - 443:443
     volumes:
