--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -4,10 +4,10 @@ services:
     image: mysql
     restart: always
     environment:
-      - MYSQL_DATABASE='mydatabase'
-      - MYSQL_USER='root'
-      - MYSQL_PASSWORD=''
-      - MYSQL_ROOT_PASSWORD='some_password'
+      - MYSQL_DATABASE=${MYSQL_DATABASE_NAME_PRODUCTION}
+      - MYSQL_USER=${MYSQL_DATABASE_USERNAME_PRODUCTION}
+      - MYSQL_PASSWORD=${MYSQL_DATABASE_PASSWORD_PRODUCTION}
+      - MYSQL_ROOT_PASSWORD=${MYSQL_DATABASE_ROOT_PASSWORD_PRODUCTION}
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3306:3306'
