--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -20,7 +20,17 @@ services:
     image: redis:alpine
     ports:
       - 6379:6379
-
+  
+  nginx:
+    image: nginx:latest
+    restart: unless-stopped
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - ..env/nginx.conf:/etc/nginx/nginx.conf
+      - ..env:/ssl/
+  
 
   web:
     image: haynesb/xdb:${TAG}
@@ -28,9 +38,11 @@ services:
       sh -c "
       python manage.py migrate &&
       python manage.py collectstatic &&
-      daphne -e ssl:443:privateKey=ssl/key.pem:certKey=ssl/crt.pem:extraCertChain=ssl/chain.pem xdb_price_chat.asgi:application"
+      daphne -b 0.0.0.0 -p 80 django_project.asgi:application"
     ports:
-      - 443:443
+      - 3838:80
+    expose:
+      - 3838
     volumes:
       - /tmp/xdb_db/mysqld:/run/mysqld
       - ../env:/home/app/ssl
@@ -48,6 +60,8 @@ services:
       - ../env/prod.env
     depends_on:
       - redis
+    expose:
+      - 3838
     volumes:
       - /tmp/xdb_db/mysqld:/run/mysqld
       - ../exports:/home/app/xdb/exports
