--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -23,13 +23,15 @@ services:
   
   nginx:
     image: nginx:latest
-    restart: unless-stopped
+    restart: always
     ports:
       - 80:80
       - 443:443
     volumes:
       - ..env/nginx.conf:/etc/nginx/nginx.conf
       - ..env:/ssl/
+    depends_on:
+      - web
   
 
   web:
@@ -40,7 +42,7 @@ services:
       python manage.py collectstatic &&
       daphne -b 0.0.0.0 -p 80 xdb_price_chat.asgi:application"
     ports:
-      - 3838:80
+      - 3838:3838
     expose:
       - 3838
     volumes:
