--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -29,7 +29,7 @@ services:
       - 443:443
     volumes:
       - ..env/nginx.conf:/etc/nginx/nginx.conf
-      - ..env:/ssl/
+      - ../env:/ssl/
     depends_on:
       - web
   
@@ -40,7 +40,7 @@ services:
       sh -c "
       python manage.py migrate &&
       python manage.py collectstatic &&
-      daphne -b 0.0.0.0 -p 80 xdb_price_chat.asgi:application"
+      daphne -b 0.0.0.0 -p 3838 xdb_price_chat.asgi:application"
     ports:
       - 3838:3838
     expose:
