--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -43,6 +43,8 @@ services:
       python manage.py migrate &&
       python manage.py collectstatic &&
       daphne -b 0.0.0.0 -p 80 xdb_price_chat.asgi:application"
+    ports:
+      - 3838:80
     expose:
       - 3838
     volumes:
