--- a/docker-compose-staging.yaml
+++ b/docker-compose-staging.yaml
@@ -43,7 +43,7 @@ services:
     env_file:
       - ../env/prod.env
     depends_on:
-      - db
+      - db_staging
 
   django-q:
     image: haynesb/xdb:${TAG}
