--- a/docker-compose-staging.yaml
+++ b/docker-compose-staging.yaml
@@ -16,11 +16,16 @@ services:
     volumes:
       - /tmp/xdb_db/mysqld:/var/run/mysqld
       - staging-xdb-db:/var/lib/mysql
+    networks:
+      - staging_net
   
-  redis:
+  redis_staging:
     image: redis:alpine
+    container_name: redis_staging
     ports:
       - 6380:6380
+    networks:
+      - staging_net
   
 
   web_staging:
@@ -41,25 +46,33 @@ services:
       - ../exports:/home/app/xdb/exports
 
     env_file:
-      - ../env/prod.env
+      - ../env/staging.env
     depends_on:
       - db_staging
+    networks:
+      - staging_net
 
-  django-q:
+  django-q_staging:
     image: haynesb/xdb:${TAG}
     command: python manage.py qcluster --settings xdb_price_chat.settings.production
+    container_name: django-q_staging
     env_file:
       - ../env/staging.env
     expose:
       - 8001
     depends_on:
-      - redis
+      - redis_staging
     volumes:
       - /tmp/xdb_db/mysqld:/run/mysqld
       - ../exports:/home/app/xdb/exports
+    networks:
+      - staging_net
     
-  
+
+networks:
+  staging_net:
   
 
 volumes:
   staging-xdb-db:
+
