--- a/docker-compose-staging.yaml
+++ b/docker-compose-staging.yaml
@@ -9,12 +9,13 @@ services:
       - MYSQL_USER=${MYSQL_DATABASE_USERNAME_STAGING}
       - MYSQL_PASSWORD=${MYSQL_DATABASE_PASSWORD_STAGING}
       - MYSQL_ROOT_PASSWORD=${MYSQL_DATABASE_ROOT_PASSWORD_STAGING}
+      - MYSQL_TCP_PORT=3307
     ports:
       # <Port exposed> : < MySQL Port running inside container>
       - '3307:3307'
       # Where our data will be persisted
     volumes:
-      - /tmp/xdb_db/mysqld:/var/run/mysqld
+      - /tmp/xdb_db_staging/mysqld:/var/run/mysqld
       - staging-xdb-db:/var/lib/mysql
     networks:
       - staging_net
@@ -41,7 +42,7 @@ services:
     expose:
       - 8001
     volumes:
-      - /tmp/xdb_db/mysqld:/run/mysqld
+      - /tmp/xdb_db_staging/mysqld:/run/mysqld
       - ../env:/home/app/ssl
       - ../exports:/home/app/xdb/exports
 
@@ -63,7 +64,7 @@ services:
     depends_on:
       - redis_staging
     volumes:
-      - /tmp/xdb_db/mysqld:/run/mysqld
+      - /tmp/xdb_db_staging/mysqld:/run/mysqld
       - ../exports:/home/app/xdb/exports
     networks:
       - staging_net
