--- a/docker-compose-staging.yaml
+++ b/docker-compose-staging.yaml
@@ -14,7 +14,7 @@ services:
       - '3307:3306'
       # Where our data will be persisted
     volumes:
-      - /tmp/xdb_db/mysqld:/var/run/mysqld
+      - ../tmp/:/var/run/mysqld
       - staging-xdb-db:/var/lib/mysql
     networks:
       - staging_net
@@ -41,7 +41,7 @@ services:
     expose:
       - 8001
     volumes:
-      - /tmp/xdb_db/mysqld:/run/mysqld
+      - ../tmp/:/var/run/mysqld
       - ../env:/home/app/ssl
       - ../exports:/home/app/xdb/exports
 
@@ -63,7 +63,7 @@ services:
     depends_on:
       - redis_staging
     volumes:
-      - /tmp/xdb_db/mysqld:/run/mysqld
+      - ../tmp/:/var/run/mysqld
       - ../exports:/home/app/xdb/exports
     networks:
       - staging_net
