--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -42,6 +42,7 @@ services:
       sh -c "
       python manage.py migrate &&
       python manage.py collectstatic &&
+      python manage.py crontab add &&
       daphne -b 0.0.0.0 -p 8000 xdb_price_chat.asgi:application"
     ports:
       - 8000:8000
