--- a/docker-compose-staging.yaml
+++ b/docker-compose-staging.yaml
@@ -34,6 +34,7 @@ services:
       sh -c "
       python manage.py migrate &&
       python manage.py collectstatic &&
+      python manage.py crontab add &&
       daphne -b 0.0.0.0 -p 8001 xdb_price_chat.asgi:application"
     ports:
       - 8001:8001
