--- a/docker-compose-staging.yaml
+++ b/docker-compose-staging.yaml
@@ -33,7 +33,7 @@ services:
     command: >
       sh -c "
       python manage.py migrate &&
-      python manage.py collectstatic &&
+      python manage.py collectstatic --noinput &&
       python manage.py crontab add &&
       daphne -b 0.0.0.0 -p 8001 xdb_price_chat.asgi:application"
     ports:
